# Bachelor-E2205

./: LICENSE  README.md  test.txt  test_elias.py  test_erik.py  test_simen.py
.github/ISSUE_TEMPLATE/: task-template.md
bluerov2_communication/: package.xml  setup.cfg  setup.py
bluerov2_communication/bluerov2_communication/: bluerov2_comm.py  bluerov2_comm_node.py
bluerov2_interface_bridge/: CMakeLists.txt  package.xml
bluerov2_interface_bridge/include/bluerov2_interface_bridge/: bluerov2_interface_node.hpp
bluerov2_interface_bridge/src/: bluerov2_interface_node.cpp
controller_package/: CMakeLists.txt  README.md  package.xml
controller_package/cfg/: control.yaml
controller_package/include/controller_package/: common.hpp  control_PID.hpp  control_actuator.h  control_actuator.hpp  control_input.h  control_reference.hpp  controller.hpp  controller_actuation_builder.hpp  controller_complete.h  controller_node.hpp  controller_reference.hpp  eigen_typedef.h  joy_to_action.h  joy_to_action.hpp  logging.hpp  setpoint_holder.hpp
controller_package/launch/: controller_launch.py  controller_pid_launch.py
controller_package/params/: attitude_setpoint.yaml  params.yaml  position_setpoint.yaml  safe.txt
controller_package/src/: control_PID.cpp  control_actuator.cpp  control_input.cpp  control_reference.cpp  controller.cpp  controller_actuation_builder.cpp  controller_complete.cpp  controller_node.cpp  controller_reference.cpp  joy_to_action.cpp  logging.cpp  setpoint_holder.cpp
py_pubsub/: package.xml  setup.py
simulator/: Attitude_plot.py  Current_sim_26_04.py  Elias-tester-del-1  Elias-tester-del2  Odeint_Simulator.py  Sim_w_BR2_params.py  Simulator.py  Working_Simulator.py  data_plotter.py  even_hotter_garbage.py  ligma_balls.py  new.py  sim_and_data_plotter.py  simulator.py  simulator_e.py  temp.py  test.py  thruster_plotter.py  wombocombo.py
